--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -4,9 +4,9 @@ on:
   push:
     tags:
       - 'v*.*.*'
+
 permissions:
   contents: read
-  packages: write
 
 jobs:
   build:
@@ -19,9 +19,15 @@ jobs:
         with:
           node-version: 18
 
-      - name: Build & push Docker image
+      - name: Login to DockerHub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build & push to DockerHub
         uses: docker/build-push-action@v4
         with:
           context: .
           push: true
-          tags: ghcr.io/internet2000/nocodb-graphql-mesh:latest
+          tags: silexlabs/nocodb-graphql-mesh:latest
